# EngineS

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  README.md
EngineS/Example/: CMakeLists.txt  TestComponent.cpp  TestScene.cpp  main.cpp
EngineS/Example/Assets/: sprite.glsl
EngineS/Source/: CMakeLists.txt  Engine.cpp  Engine.hpp  TestScene.cpp  TestScene.hpp  main.cpp
EngineS/Source/Core/Base/: AutoReleasePool.cpp  AutoReleasePool.hpp  Hash.hpp  Macros.hpp  Object.hpp  PoolManager.cpp  Types.hpp
EngineS/Source/Core/Logging/: LoggingSystem.cpp  LoggingSystem.hpp
EngineS/Source/Core/Math/: Math.cpp  Math.hpp  MathHeaders.hpp  Matrix4x4.cpp  Matrix4x4.hpp  MatrixTransform.cpp  MatrixTransform.hpp  Vector2.cpp  Vector2.hpp  Vector3.cpp  Vector3.hpp  Vector4.hpp
EngineS/Source/Function/Global/: Global.cpp  Global.hpp
EngineS/Source/Function/Input/: InputSystem.cpp  InputSystem.hpp  KeyCode.hpp
EngineS/Source/Function/Object/: GameObject.cpp  GameObject.hpp  GameObjectFactory.cpp  GameObjectFactory.hpp
EngineS/Source/Function/Render/: Material2D.hpp  Program.cpp  Program.hpp  RenderSystem.cpp  RenderSystem.hpp  Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp  SpriteBatch.cpp  SpriteBatch.hpp  SpriteRenderer.cpp  SpriteRenderer.hpp  Texture2D.cpp  Texture2D.hpp  Types.hpp  WindowSystem.cpp  WindowSystem.hpp
EngineS/Source/Function/Scene/: Scene.cpp  Scene.hpp  SceneManager.cpp  SceneManager.hpp
EngineS/Source/Math/: Matrix3x3.hpp  Vector2.hpp
EngineS/Source/Resource/: MetaData.cpp  Resource.hpp  ResourceManager.cpp  ResourceManager.hpp
EngineS/Source/Resource/CommonResources/: Text.hpp
Example/: CMakeLists.txt  TestComponent.cpp  TestComponent.hpp  TestScene.cpp  TestScene.hpp  main.cpp
Source/EngineS/: CMakeLists.txt  EngineS.hpp
Source/EngineS/Base/: AutoReleasePool.cpp  Concepts.hpp  Hash.hpp  LoggingSystem.hpp  Macros.hpp  Object.cpp  Object.hpp  Platform.hpp  PoolManager.cpp  PoolManager.hpp  PrimitiveTypes.hpp  Ref.cpp  Ref.hpp  SharedPtr.hpp  Type.cpp  Type.hpp  TypeRegistry.cpp  TypeTraits.hpp  Variant.cpp  Variant.hpp
Source/EngineS/Core/: Concepts.hpp  Hash.hpp  Macros.hpp  Object.hpp  Platform.hpp  TypeTraits.hpp
Source/EngineS/Core/Container/: Iterator.hpp  String.cpp  String.hpp
Source/EngineS/Core/IO/: FileUtils.cpp  FileUtils.hpp  InputSystem.cpp  InputSystem.hpp  Logger.cpp  Logger.hpp
Source/EngineS/Core/Math/: Color.cpp  Color.hpp  IO.hpp  Math.hpp  Matrix3x3.cpp  Matrix3x3.hpp  Matrix4x4.cpp  Vector2.cpp  Vector2.hpp  Vector3.cpp  Vector3.hpp  Vector4.cpp  Vector4.hpp
Source/EngineS/Core/Memory/: AutoReleasePool.cpp  AutoReleasePool.hpp  Ref.cpp  Ref.hpp  SharedPtr.hpp
Source/EngineS/Core/Reflection/: Argument.cpp  Argument.hpp  Constructor.hpp  ConstructorInfo.hpp  Destructor.hpp  DestructorInfo.hpp  EnumInfo.hpp  Field.hpp  FieldInfo.hpp  Instance.cpp  Instance.hpp  MemberInfo.hpp  Method.hpp  MethodInfo.hpp  Parameter.hpp  ParameterInfo.hpp  Registration.cpp  Registration.hpp  Type.cpp  Type.hpp  TypeOf.hpp  TypeRegistry.cpp  TypeRegistry.hpp  Utils.hpp  Variant.cpp  Variant.hpp
Source/EngineS/Engine/: Engine.cpp  Engine.hpp
Source/EngineS/Function/: Camera.cpp  Camera.hpp  Component.cpp  Component.hpp  GameObject.cpp  GameObject.hpp  GameObjectFactory.cpp  GameObjectFactory.hpp  InputSystem.cpp  InputSystem.hpp  KeyCode.def  Scene.cpp  Scene.hpp  SceneManager.cpp  SceneManager.hpp  Transform2D.cpp  Transform2D.hpp
Source/EngineS/GameObject/: Component.cpp  Component.hpp  GameObject.cpp  GameObject.hpp  GameObjectFactory.cpp  Transform2D.cpp  Transform2D.hpp
Source/EngineS/Gameplay/GameObject/: Component.cpp  Component.hpp  GameObject.cpp  GameObject.hpp  GameObjectFactory.cpp  Transform2D.cpp  Transform2D.hpp
Source/EngineS/Gameplay/Scene/: Scene.cpp  (+3 more)
Source/EngineS/Graphics/: Camera.cpp  Camera.hpp  Material2D.cpp  Material2D.hpp  RenderSystem.cpp  RenderSystem.hpp  SpriteRenderer.cpp  SpriteRenderer.hpp  WindowSystem.cpp  WindowSystem.hpp
Source/EngineS/GraphicsAPI/: Buffer.cpp  Buffer.hpp  BufferTypes.hpp  DeviceInfo.cpp  DrawList.cpp  DrawList.hpp  Framebuffer.hpp  Program.cpp  Program.hpp  RenderDevice.cpp  RenderDevice.hpp  RenderPipeline.cpp  RenderPipeline.hpp  RenderTypes.hpp  Renderer.hpp  Shader.hpp  Texture2D.cpp  Texture2D.hpp
Source/EngineS/IO/: FileUtils.cpp  InputSystem.cpp  InputSystem.hpp  Logger.cpp  Logger.hpp
Source/EngineS/Math/: Color.hpp  IO.hpp  Math.hpp  Matrix3x3.cpp  Matrix4x4.cpp  Matrix4x4.hpp  Vector2.cpp  Vector2.hpp  Vector3.cpp  Vector3.hpp  Vector4.cpp  Vector4.hpp
Source/EngineS/Platform/: GLCommon.hpp
Source/EngineS/Reflection/: Argument.cpp  Argument.hpp  ConstructorInfo.hpp  DestructorInfo.hpp  EnumInfo.hpp  FieldInfo.cpp  FieldInfo.hpp  Instance.cpp  Instance.hpp  MemberInfo.cpp  MemberInfo.hpp  MethodInfo.cpp  MethodInfo.hpp  ParameterInfo.hpp  Registration.cpp  Registration.hpp  Type.cpp  Type.hpp  TypeOf.hpp  TypeRegistry.cpp  TypeRegistry.hpp  Utils.hpp  Variant.cpp  Variant.hpp
Source/EngineS/Render/: Buffer.cpp  Buffer.hpp  DeviceInfo.cpp  DrawList.cpp  DrawList.hpp  Framebuffer.cpp  Material2D.cpp  Material2D.hpp  Program.cpp  Program.hpp  RenderDevice.cpp  RenderDevice.hpp  RenderPipeline.cpp  RenderPipeline.hpp  RenderSystem.cpp  RenderSystem.hpp  RenderTypes.hpp  Renderer.hpp  Shader.cpp  Shader.hpp  SpriteBatch.cpp  SpriteBatch.hpp  SpriteRenderer.cpp  SpriteRenderer.hpp  Texture2D.cpp  Texture2D.hpp  WindowSystem.cpp  WindowSystem.hpp
Source/EngineS/Resource/: MetaData.cpp  MetaData.hpp  Resource.hpp  ResourceManager.cpp  ResourceManager.hpp
Source/EngineS/Scene/: Scene.cpp  Scene.hpp  SceneManager.cpp  SceneManager.hpp
Source/EngineS/Scripting/: LuaUtils.hpp  ScriptingEngine.cpp  ScriptingEngine.hpp
Source/ReflCompiler/: BustacheNlohmann.hpp  CMakeLists.txt  ReflCompiler.cpp  ReflCompiler.hpp  Template.hpp  Template.mustache  main.cpp
Test/: CMakeLists.txt
Test/Container/: String.cpp
Test/Reflection/: Constructors.cpp  Enum.cpp  Fields.cpp  Instance.cpp  Methods.cpp  Type.cpp  Variant.cpp
(+229 files in other folders)
