add_executable(Example main.cpp TestScene.cpp)
target_link_libraries(Example EngineS)

set(ASSETS_ROOT_DIR ${CMAKE_CURRENT_SOURCE_DIR}/Assets)
set(EXECUTABLE_OUTPUT_PATH ${CMAKE_CURRENT_SOURCE_DIR}/bin)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/bin)
set(BINARY_ROOT_DIR ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})
set(OUTPUT_ASSETS_DIR ${BINARY_ROOT_DIR}/Assets)

add_custom_command(TARGET Example POST_BUILD
        COMMAND ${CMAKE_COMMAND} -E remove_directory ${OUTPUT_ASSETS_DIR}
        COMMAND ${CMAKE_COMMAND} -E copy_directory ${ASSETS_ROOT_DIR} ${OUTPUT_ASSETS_DIR})